--- a/www/Cakes&Sweets.html
+++ b/www/Cakes&Sweets.html
@@ -29,12 +29,10 @@
         * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
             * Enable inline JS: add 'unsafe-inline' to default-src
     -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-    <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="css/index.css">
 
     <title>Cakes&sweets</title>
@@ -48,24 +46,24 @@
         <h1>Cakes & Sweets</h1>
     </div>
 <hr>
-    <div data-role="main" class="ui-content">
+
 
         <img src="img/wood.jpeg" class="img1">
-        <div> <a href="cakes.html" class="cakes"> Cakes  </a></div></br>
+         <a href="cakes.html" class="cakes" rel="external"> Cakes  </a><</br>
         <img src="img/wood.jpeg" class="img1"/>
-        <div> <a href="breakfast.html" class="breakfast"> Breakfast </a> </div></br>
+         <a href="breakfast.html" class="breakfast" rel="external"> Breakfast </a> </br>
         <img src="img/wood.jpeg" class="img1"/>
-        <div> <a href="traditionals.html" class="traditionals"> Traditionals </a></div>
-    </div>
+         <a href="traditionals.html" class="traditionals" rel="external"> Traditionals </a>
+
 <hr>
 
-    <div data-role="footer">
-        <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
-            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
-            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
-        </div>
+    <div data-role="navbar">
+        <ul>
+            <li><a href="Home.html" rel="external">Home</a></li>
+            <li><a href="favorits.html" rel="external">Favorits</a></li>
+            <li><a href="MyCalendar.html"rel="external">My Calendar</a></li>
+            <li><a href="Preferences.html"rel="external">Preferences</a></li>
+        </ul>
     </div>
 </div>
 
