--- a/www/Home.html
+++ b/www/Home.html
@@ -2,47 +2,40 @@
 <html>
 <head>
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-    <meta name="color-scheme" content="light dark">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
     <link rel="stylesheet" href="css/index.css">
+
+
 
 </head>
 <body>
 
 <div data-role="page">
     <div data-role="main" class="ui-content">
-        <div class="ui-field-contain">
-            <div class="container">
                 <img src="img/m6.png" class="img">
-                <div> <a href="Cakes&Sweets.html" class="cakes1"> Cakes & Sweets </a></div>
-            </div>
+                <a href="Cakes&Sweets.html" class="cakes1" rel="external"> Cakes & Sweets </a>
             <br>
-            <div class="container">
                 <img src="img/m8.png" class="img"/>
-                <div> <a href="foods.html" class="foods"> Foods </a> </div>
-            </div>
+                 <a href="foods.html" class="foods"rel="external"> Foods </a>
             <br>
-            <div class="container">
                 <img src="img/m7.png" class="img"/>
-                <div> <a href="drinks.html" class="drinks"> Drinks </a></div>
-            </div>
+                 <a href="drinks.html" class="drinks"rel="external"> Drinks </a>
 
-        </div>
+
+
 
     </div>
     <hr>
-    <div data-role="footer">
-        <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
-            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
-        </div>
+    <div data-role="navbar">
+        <ul>
+            
+            <li><a href="favorits.html" rel="external">Favorits</a></li>
+            <li><a href="MyCalendar.html">My Calendar</a></li>
+            <li><a href="Preferences.html">Preferences</a></li>
+        </ul>
     </div>
 </div>
 
