--- a/www/breakfast.html
+++ b/www/breakfast.html
@@ -29,13 +29,13 @@
         * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
         * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
             * Enable inline JS: add 'unsafe-inline' to default-src
-    -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-    <meta name="color-scheme" content="light dark">
+    --><meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="css/index.css">
+
+
     <title>Breakfast</title>
 </head>
 <body >
@@ -47,28 +47,29 @@
 
     <div data-role="main" class="ui-content">
 
-        <a href="gaufre.html"> <img src="img/gaufre.jpg"class="lemon" ></a>
+        <a href="gaufre.html" rel="external"> <img src="img/gaufre.jpg"class="lemon" ></a>
 
-        <a href="crepe.html"><img src="img/crepe.jpg" class="chocolate" /></a>
-        <a href="croissant.html"><img src="img/croissant.jpg" class="cheese" /></a>
+        <a href="crepe.html"rel="external"><img src="img/crepe.jpg" class="chocolate" /></a>
+        <a href="croissant.html"rel="external"><img src="img/croissant.jpg" class="cheese" /></a>
 
     </div>
 
 
     <hr>
 
-    <div data-role="footer">
-        <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
-            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
-            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
-        </div>
+
+    <div data-role="navbar">
+        <ul>
+            <li><a href="Home.html" rel="external">Home</a></li>
+            <li><a href="favorits.html" rel="external">Favorits</a></li>
+            <li><a href="MyCalendar.html">My Calendar</a></li>
+            <li><a href="Preferences.html">Preferences</a></li>
+        </ul>
     </div>
+
+
+
 </div>
-
-
-
 
 </body>
 </html>
