--- a/www/cakes.html
+++ b/www/cakes.html
@@ -29,39 +29,33 @@
         * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
             * Enable inline JS: add 'unsafe-inline' to default-src
     -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-    <meta name="color-scheme" content="light dark">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="css/index.css">
+
     <title>Cakes</title>
 </head>
 <body >
 <div data-role="page">
-    <div data-role="header">
+    <div data-role="header" >
         <h1>Cakes</h1>
     </div>
     <hr>
-
-    <div data-role="main" class="ui-content">
-
-        <a href="lemon_cake.html" ><img src="img/lemon.jpg"class="lemon" ></a>
-
-        <a href="chocolate_cake.html"> <img src="img/chocolate.jpg" class="chocolate" /></a>
-        <a href="cheese_cake.html" ><img src="img/cheesecake.jpeg" class="cheese" /></a>
-    </div>
-
+        <a href="lemon_cake.html"rel="external" ><img src="img/lemon.jpg"class="lemon" ></a>
+        <a href="chocolate_cake.html"rel="external"> <img src="img/chocolate.jpg" class="chocolate" /></a>
+        <a href="cheese_cake.html" rel="external"><img src="img/cheesecake.jpeg" class="cheese" /></a>
 
 <hr>
 
-    <div data-role="footer">
-        <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
-            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
-            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
-        </div>
+    <div data-role="navbar">
+        <ul>
+            <li><a href="Home.html" rel="external">Home</a></li>
+            <li><a href="favorits.html" rel="external">Favorits</a></li>
+            <li><a href="MyCalendar.html">My Calendar</a></li>
+            <li><a href="Preferences.html">Preferences</a></li>
+        </ul>
     </div>
 </div>
 
