--- a/www/cheese_cake.html
+++ b/www/cheese_cake.html
@@ -19,24 +19,10 @@
 -->
 <html>
 <head>
-    <meta charset="utf-8">
-    <!--
-    Customize this policy to fit your own app's needs. For more guidance, see:
-        https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-    Some notes:
-        * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-        * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-        * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-            * Enable inline JS: add 'unsafe-inline' to default-src
-    -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-    <meta name="color-scheme" content="light dark">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Cheese cake</title>
 </head>
@@ -47,9 +33,8 @@
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-<div><img src="img/cheesecake.jpeg"class="img3" ></div>
-        <div data-role="content">
-<h1>Ingredient</h1>
+        <div><img src="img/cheesecake.jpeg"class="img3" ></div>
+            <h1>Ingredient</h1>
 <hr>
 
 <ul data-role="listview" data-inset="true">
@@ -65,8 +50,8 @@
     <li>1 vanilla pod</li>
 
 </ul>
-        </div>
-        <div data-role="content">
+
+
 <h1>Preparation steps</h1>
 <hr>
 <ol data-role="none" data-autodividers="false">
@@ -81,25 +66,24 @@
 
     <li>Enjoy!</li>
 </ol>
-
-        </div>
     </div>
-</div>
 
-</body>
+
+
+
 
 <hr>
-<div data-role="footer">
-    <div data-role="controlgroup" data-type="horizontal">
-        <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
-        <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
-        <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
-        <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
-    </div>
+<div data-role="navbar">
+    <ul>
+        <li><a href="Home.html" rel="external">Home</a></li>
+        <li><a href="favorits.html" rel="external">Favorits</a></li>
+        <li><a href="MyCalendar.html">My Calendar</a></li>
+        <li><a href="Preferences.html">Preferences</a></li>
+    </ul>
 </div>
 
 
-
+</div>
 
 </body>
 </html>
