--- a/www/colddrinks.html
+++ b/www/colddrinks.html
@@ -29,14 +29,10 @@
         * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
             * Enable inline JS: add 'unsafe-inline' to default-src
     -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-    <meta name="color-scheme" content="light dark">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Cold drinks</title>
 </head>
@@ -47,22 +43,22 @@
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-        <a href="coktail.html"> <img src="img/coktail.jpg"class="lemon" ></a>
+        <a href="coktail.html" rel="external"> <img src="img/coktail.jpg"class="lemon" ></a>
 
-        <a href="Kiwi_juice.html"><img src="img/Kiwijuice.jpg" class="chocolate" /></a>
-        <a href="Strawberry_juice.html"> <img src="img/strawberryjuice.jpg" class="cheese" /></a>
+        <a href="Kiwi_juice.html"rel="external"><img src="img/Kiwijuice.jpg" class="chocolate" /></a>
+        <a href="Strawberry_juice.html"rel="external"> <img src="img/strawberryjuice.jpg" class="cheese" /></a>
     </div>
 
 
 
 <hr>
-    <div data-role="footer">
-        <div data-role="controlgroup" data-type="horizontal">
-            <button><a href="Home.html" class="ui-btn-inline">Menu</a></button>
-            <button><a href="Favorits.html" class="ui-btn-inline">Favorits</a></button>
-            <button><a href="MyCalendar.html" class="ui-btn-inline">My calender</a></button>
-            <button><a href="Preferences.html" class="ui-btn-inline">Preferences</a></button>
-        </div>
+    <div data-role="navbar">
+        <ul>
+            <li><a href="Home.html" rel="external">Home</a></li>
+            <li><a href="favorits.html" rel="external">Favorits</a></li>
+            <li><a href="MyCalendar.html"rel="external">My Calendar</a></li>
+            <li><a href="Preferences.html"rel="external">Preferences</a></li>
+        </ul>
     </div>
 </div>
 
