--- a/www/Cakes&Sweets.html
+++ b/www/Cakes&Sweets.html
@@ -45,15 +45,15 @@
     <div data-role="header">
         <h1>Cakes & Sweets</h1>
     </div>
-<hr>
+<hr></br>
 
 
         <img src="img/wood.jpeg" class="img1">
-         <a href="cakes.html" class="cakes" rel="external"> Cakes  </a><</br>
+         <a href="cakes.html" class="cakes" rel="external"> Cakes  </a></br>
         <img src="img/wood.jpeg" class="img1"/>
          <a href="breakfast.html" class="breakfast" rel="external"> Breakfast </a> </br>
         <img src="img/wood.jpeg" class="img1"/>
-         <a href="traditionals.html" class="traditionals" rel="external"> Traditionals </a>
+         <a href="traditionals.html" class="traditionals" rel="external"> Traditionals </a></br></br>
 
 <hr>
 
