--- a/www/cakes.html
+++ b/www/cakes.html
@@ -43,8 +43,8 @@
         <h1>Cakes</h1>
     </div>
     <hr>
-        <a href="lemon_cake.html"rel="external" ><img src="img/lemon.jpg"class="lemon" ></a>
-        <a href="chocolate_cake.html"rel="external"> <img src="img/chocolate.jpg" class="chocolate" /></a>
+        <a href="lemon_cake.html"rel="external" ><img src="img/lemon.jpg"class="lemon" ></a></br>
+        <a href="chocolate_cake.html"rel="external"> <img src="img/chocolate.jpg" class="chocolate" /></a></br>
         <a href="cheese_cake.html" rel="external"><img src="img/cheesecake.jpeg" class="cheese" /></a>
 
 <hr>
@@ -53,8 +53,8 @@
         <ul>
             <li><a href="Home.html" rel="external">Home</a></li>
             <li><a href="favorits.html" rel="external">Favorits</a></li>
-            <li><a href="MyCalendar.html">My Calendar</a></li>
-            <li><a href="Preferences.html">Preferences</a></li>
+            <li><a href="MyCalendar.html"rel="external">My Calendar</a></li>
+            <li><a href="Preferences.html"rel="external">Preferences</a></li>
         </ul>
     </div>
 </div>
