--- a/www/coktail.html
+++ b/www/coktail.html
@@ -27,7 +27,7 @@
                 <li>Passion fruit</li>
 
             </ul>
-        <
+
             <h1>Preparation steps</h1>
             <hr>
             <ol data-role="none" data-autodividers="false">
@@ -43,14 +43,14 @@
 
 
 <hr>
-<div data-role="navbar">
-    <ul>
-        <li><a href="Home.html" rel="external">Home</a></li>
-        <li><a href="favorits.html" rel="external">Favorits</a></li>
-        <li><a href="MyCalendar.html">My Calendar</a></li>
-        <li><a href="Preferences.html">Preferences</a></li>
-    </ul>
-</div>
+    <div data-role="navbar">
+        <ul>
+            <li><a href="Home.html" rel="external">Home</a></li>
+            <li><a href="favorits.html" rel="external">Favorits</a></li>
+            <li><a href="MyCalendar.html"rel="external">My Calendar</a></li>
+            <li><a href="Preferences.html"rel="external">Preferences</a></li>
+        </ul>
+    </div>
 
 
 </div>
