--- a/www/colddrinks.html
+++ b/www/colddrinks.html
@@ -43,9 +43,9 @@
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-        <a href="coktail.html" rel="external"> <img src="img/coktail.jpg"class="lemon" ></a>
+        <a href="coktail.html" rel="external"> <img src="img/coktail.jpg"class="lemon" ></a></br>
 
-        <a href="Kiwi_juice.html"rel="external"><img src="img/Kiwijuice.jpg" class="chocolate" /></a>
+        <a href="Kiwi_juice.html"rel="external"><img src="img/Kiwijuice.jpg" class="chocolate" /></a></br>
         <a href="Strawberry_juice.html"rel="external"> <img src="img/strawberryjuice.jpg" class="cheese" /></a>
     </div>
 
