--- a/www/entrees.html
+++ b/www/entrees.html
@@ -33,8 +33,8 @@
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-        <a href="grilled_salad.html" rel="external"><img src="img/SaladeGrillesTunisienne.jpg"class="lemon" ></a>
-        <a href="Cesar_salad.html"rel="external" > <img src="img/Saladecesar.jpeg" class="chocolate" /></a>
+        <a href="grilled_salad.html" rel="external"><img src="img/SaladeGrillesTunisienne.jpg"class="lemon" ></a></br>
+        <a href="Cesar_salad.html"rel="external" > <img src="img/Saladecesar.jpeg" class="chocolate" /></a></br>
         <a href="Calamari_salad.html"rel="external" ><img src="img/Saladecalamar.jpg" class="cheese" /></a>
     </div>
 
