--- a/www/foods.html
+++ b/www/foods.html
@@ -31,13 +31,13 @@
     <div data-role="header">
         <h1>Foods</h1>
     </div>
-<hr>
+<hr></br></br></br>
     <div data-role="main" class="ui-content">
         <img src="img/wood.jpeg" class="img2">
          <a href="entrees.html" class="entrees" rel="external"> Entrees  </a></br>
         <img src="img/wood.jpeg" class="img2"/>
          <a href="maincourse.html" class="maincourse" rel="external"> Main course </a> </br>
-    </div>
+    </div></br></br></br>
 
 <hr>
     <div data-role="navbar">
