--- a/www/hotdrinks.html
+++ b/www/hotdrinks.html
@@ -33,8 +33,8 @@
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-        <a href="Coffee.html"rel="external"> <img src="img/coffee.jpg"class="lemon" ></a>
-        <a href="Hot_chocolate.html"rel="external"><img src="img/hotchocolate.jpg" class="chocolate" /></a>
+        <a href="Coffee.html"rel="external"> <img src="img/coffee.jpg"class="lemon" ></a></br>
+        <a href="Hot_chocolate.html"rel="external"><img src="img/hotchocolate.jpg" class="chocolate" /></a></br>
         <a href="tea.html"rel="external"><img src="img/greentea.jpg" class="cheese" /></a>
     </div>
 
