--- a/www/maincourse.html
+++ b/www/maincourse.html
@@ -33,8 +33,8 @@
     </div>
 <hr>
     <div data-role="main" class="ui-content">
-        <a href="Coscous.html"rel="external" ><img src="img/couscous.jpg" class="cheese" /></a>
-        <a href="Spaghetti.html" rel="external"> <img src="img/spaghetti.jpg" class="chocolate" /></a>
+        <a href="Coscous.html"rel="external" ><img src="img/couscous.jpg" class="cheese" /></a></br>
+        <a href="Spaghetti.html" rel="external"> <img src="img/spaghetti.jpg" class="chocolate" /></a></br>
         <a href="Lasagne.html" rel="external"><img src="img/lasagne.jpg" class="cheese" /></a>
 
     </div>
