--- a/www/traditionals.html
+++ b/www/traditionals.html
@@ -37,9 +37,9 @@
 
     <div data-role="main" class="ui-content">
 
-        <a href="Kaakwarka.html"rel="external"><img src="img/Kaakwarka.jpg"class="lemon" ></a>
+        <a href="Kaakwarka.html"rel="external"><img src="img/Kaakwarka.jpg"class="lemon" ></a></br>
 
-        <a href="Makroudh.html" rel="external"><img src="img/makrouth.png" class="chocolate" /></a>
+        <a href="Makroudh.html" rel="external"><img src="img/makrouth.png" class="chocolate" /></a></br>
         <a href="Bjawiya.html" rel="external"><img src="img/bjawiya.jpg" class="cheese" /></a>
 
 
@@ -52,8 +52,8 @@
         <ul>
             <li><a href="Home.html" rel="external">Home</a></li>
             <li><a href="favorits.html" rel="external">Favorits</a></li>
-            <li><a href="MyCalendar.html">My Calendar</a></li>
-            <li><a href="Preferences.html">Preferences</a></li>
+            <li><a href="MyCalendar.html"rel="external">My Calendar</a></li>
+            <li><a href="Preferences.html"rel="external">Preferences</a></li>
         </ul>
     </div>
 </div>
