--- a/www/Home.html
+++ b/www/Home.html
@@ -31,10 +31,10 @@
     <hr>
     <div data-role="navbar">
         <ul>
-            
+           
             <li><a href="favorits.html" rel="external">Favorits</a></li>
-            <li><a href="MyCalendar.html">My Calendar</a></li>
-            <li><a href="Preferences.html">Preferences</a></li>
+            <li><a href="MyCalendar.html"rel="external">My Calendar</a></li>
+            <li><a href="Preferences.html"rel="external">Preferences</a></li>
         </ul>
     </div>
 </div>
