--- a/www/breakfast.html
+++ b/www/breakfast.html
@@ -47,9 +47,9 @@
 
     <div data-role="main" class="ui-content">
 
-        <a href="gaufre.html" rel="external"> <img src="img/gaufre.jpg"class="lemon" ></a>
+        <a href="gaufre.html" rel="external"> <img src="img/gaufre.jpg"class="lemon" ></a></br>
 
-        <a href="crepe.html"rel="external"><img src="img/crepe.jpg" class="chocolate" /></a>
+        <a href="crepe.html"rel="external"><img src="img/crepe.jpg" class="chocolate" /></a></br>
         <a href="croissant.html"rel="external"><img src="img/croissant.jpg" class="cheese" /></a>
 
     </div>
@@ -62,8 +62,8 @@
         <ul>
             <li><a href="Home.html" rel="external">Home</a></li>
             <li><a href="favorits.html" rel="external">Favorits</a></li>
-            <li><a href="MyCalendar.html">My Calendar</a></li>
-            <li><a href="Preferences.html">Preferences</a></li>
+            <li><a href="MyCalendar.html"rel="external">My Calendar</a></li>
+            <li><a href="Preferences.html"rel="external">Preferences</a></li>
         </ul>
     </div>
 
