--- a/www/cheese_cake.html
+++ b/www/cheese_cake.html
@@ -73,14 +73,14 @@
 
 
 <hr>
-<div data-role="navbar">
-    <ul>
-        <li><a href="Home.html" rel="external">Home</a></li>
-        <li><a href="favorits.html" rel="external">Favorits</a></li>
-        <li><a href="MyCalendar.html">My Calendar</a></li>
-        <li><a href="Preferences.html">Preferences</a></li>
-    </ul>
-</div>
+    <div data-role="navbar">
+        <ul>
+            <li><a href="Home.html" rel="external">Home</a></li>
+            <li><a href="favorits.html" rel="external">Favorits</a></li>
+            <li><a href="MyCalendar.html"rel="external">My Calendar</a></li>
+            <li><a href="Preferences.html"rel="external">Preferences</a></li>
+        </ul>
+    </div>
 
 
 </div>
