--- a/www/chocolate_cake.html
+++ b/www/chocolate_cake.html
@@ -81,8 +81,8 @@
         <ul>
             <li><a href="Home.html" rel="external">Home</a></li>
             <li><a href="favorits.html" rel="external">Favorits</a></li>
-            <li><a href="MyCalendar.html">My Calendar</a></li>
-            <li><a href="Preferences.html">Preferences</a></li>
+            <li><a href="MyCalendar.html"rel="external">My Calendar</a></li>
+            <li><a href="Preferences.html"rel="external">Preferences</a></li>
         </ul>
     </div>
 </div>
