--- a/www/drinks.html
+++ b/www/drinks.html
@@ -31,14 +31,14 @@
     <div data-role="header">
         <h1>Drinks</h1>
     </div>
-<hr>
+<hr></br></br></br>
     <div data-role="main" class="ui-content">
 
         <img src="img/wood.jpeg" class="img2">
          <a href="hotdrinks.html" class="entrees"rel="external"> Hot Drinks  </a></br>
         <img src="img/wood.jpeg" class="img2"/>
          <a href="colddrinks.html" class="maincourse"rel="external"> Cold Drinks </a></br>
-    </div>
+    </div></br></br></br>
 
 <hr>
     <div data-role="navbar">
